@@ -1,3 +1,8 @@
+2017-11-13 Hanna Knutsson <hanna.knutsson@protonmail.com>
+
+	* Fix engineering mode (exp mode < -1) for rational numbers < 1 with few decimals
+	* Fix complex number multiplication (a+b*i)*(c+d*i)
+
 2017-11-12 Hanna Knutsson <hanna.knutsson@protonmail.com>
 
 	* Interval arithmetics
